# oxiauth

./: Cargo.toml  README.md
oxitoken/: .rustfmt.toml  Cargo.toml  README.md  enc_bench.json
oxitoken-macros/: Cargo.toml
oxitoken/benches/: adversarial.rs  adversarial_16k.jwt  decode.rs  encode.rs  rs256_private.der  rs256_pub.der  rsa2048.der  rsa3072.der  rsa4096.der  spiffe.der  temp.pem  validate.rs
oxitoken/benches/deprecated/: b64.rs  split.rs
oxitoken/docs/: Makefile  book.toml
oxitoken/docs/src/: SUMMARY.md  intro.md  performance.md
oxitoken/docs/src/bench_tables/: EncodingPerformance.md  ValidationPerformance.md
oxitoken/docs/util/: enc_bench.json  enc_bench_table.jq  val_bench.json  val_bench_table.jq
oxitoken/examples/: custom_validators.rs  full_example.rs  minimal_encode.rs  minimal_encode_decode.rs  revocation.rs
oxitoken/src/: algorithm.rs  error.rs  lib.rs
oxitoken/src/claims/: mod.rs  rfc7519.rs  rfc8693.rs
oxitoken/src/crypto/: mod.rs
oxitoken/src/crypto/aws_lc/: mod.rs  sign.rs  verify.rs
oxitoken/src/crypto/openssl/: mod.rs  sign.rs  verify.rs
oxitoken/src/decoding/: decode.rs  mod.rs  split.rs
oxitoken/src/encoding/: mod.rs
oxitoken/src/header/: mod.rs  rfc7515.rs
oxitoken/src/validation/: async_pipeline.rs  keystore.rs  mod.rs  pipeline.rs  validator.rs
oxitoken/tests/: aws_lc.rs  openssl.rs
