[package]
name = "oxitoken"
authors = ["Dwayne Sykes <github-public@sykes.pw>"]
description = "Fastest and most secure JWT encoding/validation library for Rust. Fully supports custom header/claims structs, an extendable validation pipeline, and is crypto-backend agnostic (built-in support for aws-lc-rs and openssl)."
categories = ["authentication", "cryptography", "security", "web-programming"]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 WITH LLVM-exception"

[lints]
workspace = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
default = ["aws-lc-rs", "postquantum"]
aws-lc-rs = ["dep:aws-lc-rs"]
postquantum = ["aws-lc-rs?/unstable"]
fips = ["aws-lc-rs?/fips"]
async = ["dep:futures"]
openssl = ["dep:openssl"]


[dependencies]
# used for encoding/decoding base64 parts of compact-encoded JWTs; provides non-SIMD fallback
base64-simd = "0.8.0"
# used for "splitting" compact-encoded JWTs (i.e. finds the dots); provides non-SIMD fallback
memchr = "2.7.6"
# used for serializing/deserializing JWT headers/claims
serde = { version = "1.0.228", features = ["derive"] }
# used for serializing/deserializing JWT headers/claims
serde_json = "1.0.145"
# provides proc macros that simplify error definitions
thiserror = "2.0.17"

# used in async validator pipeline to join futures (feature: async)
futures = { version = "0.3.31", optional = true }

# aws-lc-rs feature
aws-lc-rs = { version = "1.14.1", optional = true }

# openssl feature
openssl = { version = "0.10.74", optional = true }


[dev-dependencies]
# used in benches to compare against base64-simd
base64 = "0.22.1"
# benchmark framework
criterion = "0.7.0"
# used in examples
serde_with = "3.15.0"
# used for comparative benchmarks and as a third-party verifier in integration tests
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
#jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
#jsonwebtoken = { version = "9.3.1" }


# Adversarial JWTs designed to simulate an attempt at DDoS amplification
[[bench]]
name = "adversarial"
required-features = ["aws-lc-rs", "openssl"]
harness = false

# Raw JWT decoding (not validation) comparing oxitoken to jsonwebtoken
[[bench]]
name = "decode"
harness = false

# JWT validation across the full suite of supported algorithms for both oxitoken and jsonwebtoken
[[bench]]
name = "validate"
required-features = ["aws-lc-rs", "openssl"]
harness = false

# JWT encoding/signing for both oxitoken and jsonwebtoken
[[bench]]
name = "encode"
required-features = ["aws-lc-rs", "openssl"]
harness = false

[[test]]
name = "aws_lc"
required-features = ["aws-lc-rs"]

[[test]]
name = "openssl"
required-features = ["openssl"]

[[example]]
name = "full_example"
required-features = ["aws-lc-rs"]
doc-scrape-examples = true

[[example]]
name = "minimal_encode"
required-features = ["aws-lc-rs"]
doc-scrape-examples = true
